@@ -1,12 +1,31 @@
-# Dockerfile
-# 베이스 이미지로 Java 17 버전을 사용합니다.
-FROM openjdk:17.0.2-slim
+# [Stage 1] 빌드 단계
+FROM amazoncorretto:17-alpine-jdk AS builder
+WORKDIR /app
 
-# JAR 파일이 위치할 경로를 변수로 지정합니다.
-ARG JAR_FILE=build/libs/*.jar
+COPY . .
 
-# 위에서 지정한 JAR 파일을 app.jar 라는 이름으로 컨테이너 내부에 복사합니다.
-COPY ${JAR_FILE} app.jar
+RUN chmod +x ./gradlew
+RUN ./gradlew clean build -x test
 
-# 애플리케이션 실행 명령어입니다.
-ENTRYPOINT ["java","-jar","/app.jar"]
+RUN jlink \
+    --add-modules java.base,java.logging,java.desktop,java.management,java.sql,java.naming,java.security.jgss,java.instrument,jdk.unsupported,java.net.http,jdk.crypto.ec,java.xml \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /custom-jre
+
+# [Stage 2] 실행 단계
+FROM alpine:latest
+ENV JAVA_HOME=/custom-jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+COPY --from=builder /custom-jre $JAVA_HOME
+COPY --from=builder /app/build/libs/*.jar /app.jar
+
+ENTRYPOINT ["java", \
+  "-Xms400m", "-Xmx400m", \
+  "-XX:+UseSerialGC", \
+  "-Xss256k", \
+  "-XX:MaxMetaspaceSize=256m", \
+  "-Djava.security.egd=file:/dev/./urandom", \
+  "-jar", "/app.jar"]
